<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/rb_1"
        style="@style/rb_style"
        android:text="@string/rb1_string"
        />
    <RadioButton
        android:id="@+id/rb_2"
        style="@style/rb_style"
        android:text="@string/rb2_string"
        />
    <RadioButton
        android:id="@+id/rb_3"
        style="@style/rb_style"
        android:text="@string/rb3_string"
        />
    <RadioButton
        android:id="@+id/rb_4"
        style="@style/rb_style"
        android:text="@string/rb4_string"
        />

    <com.ctrl.forum.customview.CircleRadioView
        android:id="@+id/rb_5"
        style="@style/rb_style"
        android:text="@string/rb5_string"
        />
</RadioGroup>