<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.ctrl.forum.customview.MineHeadView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/iconfont_head"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:layout_marginTop="@dimen/margin_left_and_right"
        android:id="@+id/iv_head" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vip_name"
        android:id="@+id/tv_name"
        android:textColor="@color/text_black1"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:layout_marginTop="@dimen/margin_left_and_right"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/iv_head"
        android:layout_toEndOf="@+id/iv_head" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_grade"
        android:src="@mipmap/vip_icon2"
        android:layout_alignBottom="@+id/tv_name"
        android:layout_toRightOf="@+id/tv_name"
        android:layout_toEndOf="@+id/tv_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_year"
        android:id="@+id/tv_data"
        android:layout_marginRight="@dimen/margin_left_and_right"
        android:textSize="@dimen/text_size_basic"
        android:layout_alignBottom="@+id/iv_grade"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lou_zhu"
        android:textColor="@color/white"
        android:background="@color/xieyi"
        android:id="@+id/tv_lz"
        android:layout_alignBottom="@+id/iv_grade"
        android:layout_toRightOf="@+id/iv_grade"
        android:layout_toEndOf="@+id/iv_grade"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_reply"
        android:id="@+id/tv_replay"
        android:textColor="@color/text_black1"
        android:textSize="@dimen/text_size_basic"
        android:layout_below="@+id/iv_head"
        android:layout_alignLeft="@+id/tv_name"
        android:layout_alignStart="@+id/tv_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_cat"
        android:textSize="@dimen/text_size_basic"
        android:id="@+id/tv_replay_name"
        android:textColor="@color/text_black1"
        android:layout_alignBottom="@+id/tv_replay"
        android:layout_toRightOf="@+id/tv_replay"
        android:layout_toEndOf="@+id/tv_replay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reply_content"
        android:id="@+id/tv_replay_content"
        android:textColor="@color/text_black1"
        android:textSize="@dimen/text_size_basic"
        android:layout_alignBottom="@+id/tv_replay_name"
        android:layout_toRightOf="@+id/tv_replay_name"
         />

</RelativeLayout>
