<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
     >

    <include
        layout="@layout/toolbar_common_red"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/shop_name"
            android:textColor="@color/text_newpwd"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_basic"
            android:id="@+id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(0/20)"
            android:textColor="@color/text_newpwd"
            android:textSize="@dimen/text_size_basic"
            android:maxLength="20"
            android:id="@+id/tv_num"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView9"
            android:layout_toEndOf="@+id/textView9" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_micro"
        android:background="@color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_shop_name"
            android:background="@null"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:hint="@string/input_shop_name"
            android:textColorHint="@color/text_newpwd"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gray_space"
        android:text="@string/shop_address"
        android:textColor="@color/text_newpwd"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_basic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_micro"
        android:background="@color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_shop_address"
            android:background="@null"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:hint="@string/input_shop_address"
            android:textColorHint="@color/text_newpwd"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gray_space"
        android:text="@string/apply_name"
        android:textColor="@color/text_newpwd"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_basic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_micro"
        android:background="@color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_apply_name"
            android:background="@null"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:hint="@string/input_apply_name"
            android:textColorHint="@color/text_newpwd"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gray_space"
        android:text="@string/shop_phone"
        android:textColor="@color/text_newpwd"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_basic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_micro"
        android:background="@color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_shop_phone"
            android:background="@null"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:hint="@string/input_shop_phone"
            android:inputType="phone"
            android:textColorHint="@color/text_newpwd"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commit"
        android:textColor="@color/text_white"
        android:background="@drawable/btn_red_selector"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"/>
    </LinearLayout>

    </ScrollView>

</LinearLayout>
