<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/coupon_share"
        android:textSize="@dimen/text_size_basic"
        android:textColor="@color/rim_text"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_now"
        android:textSize="@dimen/text_size_basic"
        android:textColor="@color/rim_text"
        android:layout_gravity="center"
        android:gravity="center"
     />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray"
        android:layout_marginTop="@dimen/margin_left_and_right"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/no"
                android:id="@+id/tv_no"
                android:textSize="@dimen/text_size_basic"
                android:textColor="@color/rim_text"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <TextView
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/line_gray"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:id="@+id/tv_share"
                android:textSize="@dimen/text_size_basic"
                android:textColor="@color/rim_text"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
