<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="❀之都美容养生馆"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/rim"
        android:layout_marginTop="@dimen/margin_left_and_right"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:id="@+id/tv_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rim_shop_address"
        android:id="@+id/tv_address"
        android:textColor="@color/rim_gray"
        android:textSize="@dimen/text_size_basic"
        android:layout_below="@+id/tv_name"
        android:layout_alignLeft="@+id/tv_name"
        android:layout_alignStart="@+id/tv_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rim_phone"
        android:id="@+id/textView28"
        android:textColor="@color/rim_gray"
        android:textSize="@dimen/text_size_basic"
        android:layout_below="@+id/tv_address"
        android:layout_alignLeft="@+id/tv_address"
        android:layout_alignStart="@+id/tv_address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rim_phone_num"
        android:id="@+id/tv_number"
        android:textColor="@color/rim_gray"
        android:textSize="@dimen/text_size_basic"
        android:layout_alignBottom="@+id/textView28"
        android:layout_toRightOf="@+id/textView28"
        android:layout_toEndOf="@+id/textView28" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_phone"
        android:src="@mipmap/red_phone"
        android:paddingRight="40dp"
        android:paddingBottom="@dimen/margin_left_and_right"
        android:paddingLeft="@dimen/margin_left_and_right"
        android:paddingTop="@dimen/margin_left_and_right"
        android:layout_alignBottom="@+id/tv_address"
        android:layout_alignParentRight="true"
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_ci"
        android:id="@+id/tv_take_phone"
        android:layout_alignBottom="@+id/tv_number"
        android:layout_alignParentRight="true"
        android:textColor="@color/red_bg"
        android:textSize="@dimen/text_size_basic"
        android:layout_marginRight="@dimen/margin_left_and_right"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:id="@+id/tv_total"
        android:textColor="@color/red_bg"
        android:textSize="@dimen/text_size_basic"
        android:layout_alignBottom="@+id/tv_take_phone"
        android:layout_toLeftOf="@+id/tv_take_phone"
        android:layout_toStartOf="@+id/tv_take_phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_bo"
        android:id="@+id/textView29"
        android:textColor="@color/red_bg"
        android:textSize="@dimen/text_size_basic"
        android:layout_alignBottom="@+id/tv_total"
        android:layout_toLeftOf="@+id/tv_total"
        android:layout_toStartOf="@+id/tv_total"
        />


</RelativeLayout>
